<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:columnCount="2"
            android:useDefaultMargins="true">

            <LinearLayout
                android:id="@+id/layUrgente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgUrgente"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/urgente" />

                <TextView
                    android:id="@+id/lblUrgente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblUrgente"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layViajes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgViajes"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/viajes" />

                <TextView
                    android:id="@+id/lblViajes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblViajes"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layConciertos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgConciertos"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/concierto" />

                <TextView
                    android:id="@+id/lblConciertos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblConciertos"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layFamilia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgFamilia"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/familia" />

                <TextView
                    android:id="@+id/lblFamilia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblFamilia"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layAmigos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAmigos"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/amigos" />

                <TextView
                    android:id="@+id/lblAmigos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblAmigos"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layDeportes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgDeportes"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/deportes" />

                <TextView
                    android:id="@+id/lblDeportes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblDeportes"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layCultura"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCultura"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/cultura" />

                <TextView
                    android:id="@+id/lblCultura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblCultura"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layComida"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgComida"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/comida" />

                <TextView
                    android:id="@+id/lblComida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblComida"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layInternet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgInternet"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/internet" />

                <TextView
                    android:id="@+id/lblInternet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblInternet"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layCine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCine"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/cine" />

                <TextView
                    android:id="@+id/lblCine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblCine"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </GridLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>